--- a/pertemuan 2/style.css
+++ b/pertemuan 2/style.css
@@ -20,7 +20,8 @@ h2{
 }
 
 body{
-    background: url('bunga2.jpg');
+    background: url('tree.png') , url('field.jpg');
+    background-repeat: no-repeat, repeat;
     color: white;
 }
 
