--- a/pertemuan 2/style.css
+++ b/pertemuan 2/style.css
@@ -20,8 +20,9 @@ h2{
 }
 
 body{
-    background: url('tree.png') , url('field.jpg');
+    background: url('tree.png'), url('field.jpg');
     background-repeat: no-repeat, repeat;
+    background-position: 500px 50px, 0 0;
     color: white;
 }
 
