--- a/pertemuan 2/style.css
+++ b/pertemuan 2/style.css
@@ -1,28 +1,19 @@
-h2{
-    color : orange;
-    font-family : Trebuchet MS;
-    text-align: center;
+.satu{
+    width: 200px;
+    height: 200px;
+    background-color: lightgreen;
+    margin-left: 100px;
+    margin-top: 130px ;
+    margin-bottom: 150px;
+    margin-right: 50px;
 }
-
-.kotak{
-    padding: 50px;
+.dua{
     width: 100px;
-    color: #fff;
-    margin: 10px;
-    background: orange;
+    height: 100px;
+    background-color: lightblue;
 }
-
-#kotak{
-    width: 400px;
-    color: #fff;
-    background: blue;
-    padding: 50px;
+.tiga{
+    width: 50px;
+    height: 50px;
+    background-color: violet;
 }
-
-body{
-    background: url('tree.png'), url('field.jpg');
-    background-repeat: no-repeat, repeat;
-    background-position: 500px 50px, 0 0;
-    color: white;
-}
-
